# eventz

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  config.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yaml
assets/: index.html  script.js
migrations/2023-02-24-202718_create_events/: down.sql  up.sql
src/: app_state.rs  config.rs  main.rs  serde_utils.rs  utils.rs
src/api/: server.rs
src/db/: connect.rs  mod.rs  model.rs  schema.rs
src/indexer/: sync.rs
